<resources>
    <string name="app_name">OIS Mobile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="no_polisi">No Polisi</string>
    <string name="submit">Submit</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_print_out">PrintOutActivity</string>
    <string name="notran">NOTRAN</string>
    <string name="input_data_kendaraan">Input data kendaraan</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="test_awal">Test Awal</string>
    <string name="test_akhir">Test Akhir</string>
    <string name="username">Username</string>
    <string name="setup">Setup</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="no_transaksi">No Transaksi</string>
    <string name="manual_checkout">Manual Checkout</string>
    <string name="title_activity_barcode">BarcodeActivity</string>
    <string name="print">Print</string>
    <string name="title_activity_test_sti">TestSTI</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
