<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/root_layout"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context=".view.fragment.CheckInFragment">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Shrine.Title" />

        <TextView
            android:id="@+id/app_sub_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/input_data_kendaraan"
            android:textAppearance="@style/TextAppearance.Shrine.SubTitle" />

        <android.support.design.button.MaterialButton
            android:id="@+id/username"
            style="@style/Widget.Shrine.Button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/username" />


        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nopol_text_input"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_polisi">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nopol_edit_text"
                android:inputType="textCapCharacters"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal">

            <android.support.design.button.MaterialButton
                android:id="@+id/print_button_2"
                style="@style/Widget.Shrine.Button3"
                android:layout_marginRight="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/print" />

            <android.support.design.button.MaterialButton
                android:id="@+id/next_button"
                style="@style/Widget.Shrine.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/submit" />

            </LinearLayout>
        </RelativeLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:gravity="center">

            <android.support.design.button.MaterialButton
                android:id="@+id/awal_button"
                style="@style/Widget.Shrine.Button1"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:text="@string/test_awal" />

            <android.support.design.button.MaterialButton
                android:id="@+id/akhir_button"
                style="@style/Widget.Shrine.Button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/test_akhir" />

        </LinearLayout>

        <ImageView
            android:id="@+id/generationImageView"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
